cluster/apps/default/firewall/firewall-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: opnsense
  namespace: default
spec:
  ports:
    - name: http
      port: 443
      protocol: TCP
      targetPort: 443
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: opnsense
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.2
    ports:
      - name: http
        port: 443
        protocol: TCP
